# car_model

./: CMakeLists.txt  README.md  bind.cpp  drawtrailer.py  dynamics_model.h  kinematics_model.cpp  kinematics_model.h  pose.h  test.cpp  test.py  test_1226.cpp  test_mpc_1231.cpp  test_new_mpc.cpp  test_trailer_plot.py  tools.cpp  tools.h  visual.py  visual_real_time.py  visual_via_file.py
bind/: bind.cpp  bind_hello.cpp
control/: mpc_coupling.cpp  mpc_coupling.h  mpc_new.cpp  mpc_new.h  stanley.cpp  stanley.h
controller/: mpc_coupling.cpp  mpc_coupling.h  mpc_new.cpp  mpc_new.h  stanley.cpp  stanley.h
models/: bicycle_model_mpc.cpp  bicycle_model_mpc.h  dynamics_model.cpp  dynamics_model.h  kinematics_model.cpp  kinematics_model.h
referencepath/: point.cpp  point.h  reference_path.cpp  reference_path.h
test/: test.cpp  test.py  test0110.cpp  test0110_copy.cpp  test_1226.cpp  test_mpc_couple_0110.cpp  test_new_mpc.cpp
tools/: hellotest.cpp  mathtools.cpp  mathtools.h
